<resources>
    <string name="app_name">HrApp</string>
    <string name="copied">cpoied</string>
    <string name="login">Sign In</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please Wait</string>
    <string name="password">Password</string>
    <string name="email_address">Email</string>
    <string name="employees">Employees</string>
    <string name="back">Back</string>
    <string name="notifications">Notifications</string>
    <string name="my_profile">My Profile</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="profile">Profile</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="remember_me">Remember me</string>
    <string name="enter_your_email_to_reset_your_password">Enter your email to reset your password:</string>
    <string name="request">Request</string>
    <string name="cancel">Cancel</string>
    <string name="setting">Setting</string>
    <string name="search">Search</string>
    <string name="add_user">Add User</string>
    <string name="view_profile">View Profile</string>

    <string-array name="menu_titles">
        <item>Contact Us</item>
        <item>About</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="users">Users</string>
    <string name="createnewuser">Create New User</string>
    <string name="this_field_is_required">This field is required.</string>
    <string name="valiedemail">Please enter a valid Email.</string>
    <string name="valiedpassword">Please enter a valid Password.</string>
    <string name="domain">http://192.168.1.2:8000/</string>
</resources>
