<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    >

    <include layout="@layout/toolbar_login"
        android:id="@+id/login_toolbar"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        >




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_20sdp"
        >

        <ImageView
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_gravity="center"
            android:src="@drawable/logo"/>

        <EditText
            android:id="@+id/login_email"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_address"
            android:textColorHint="@color/whit_h"
            android:textStyle="italic"
            android:padding="@dimen/_10sdp"
            android:backgroundTint="@color/whit_h"
            android:drawablePadding="@dimen/_10sdp"
            android:drawableLeft="@drawable/ic_email"
            android:drawableTint="@color/whit_h"
            android:textColor="@color/whit_h"
            android:inputType="textEmailAddress"

            />

        <EditText
            android:id="@+id/login_password"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="@color/whit_h"
            android:textStyle="italic"
            android:padding="@dimen/_10sdp"
            android:backgroundTint="@color/whit_h"
            android:drawablePadding="@dimen/_10sdp"
            android:drawableLeft="@drawable/ic_locked"
            android:drawableTint="@color/whit_h"
            android:textColor="@color/whit_h"
            android:inputType="textPassword"

            />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/rectangle_stroke_transparent"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:textStyle="italic"
            android:paddingHorizontal="@dimen/_30sdp"

            />


    </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</RelativeLayout>